LPS-131093 regen
